nav bas fix on small screen

--- a/style/style.css
+++ b/style/style.css
@@ -24,7 +24,6 @@ body::-webkit-scrollbar {
 }
 
 body {
-  overflow-x: hidden;
   font-family: var(--body-font);
   background-color: var(--secondary-color);
 }
@@ -43,7 +42,8 @@ img {
 nav {
   position: fixed;
   isolation: isolate;
-  width: 100%;
+  width: 100vw;
+  overflow-x: hidden;
   z-index: 9;
 }
 
@@ -56,7 +56,7 @@ nav {
   background-color: var(--primary-color);
 }
 .nav__logo {
-  margin-left: 50px;
+  margin-left: 20px;
 }
 .nav__logo a{
   font-size: 1.75rem;
@@ -67,9 +67,9 @@ nav {
 
 .nav__menu__btn {
   font-size: 1.5rem;
-  margin-left: 200px;
   color: var(--white);
   cursor: pointer;
+  margin-right: 10px;
 }
 
 .nav__links {
@@ -77,13 +77,13 @@ nav {
   top: 64px;
   left: 0;
   width: 100%;
-  padding: 2rem;
   list-style: none;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  gap: 2rem;
+  padding: 1rem 0.5rem;
+  gap: 1.5rem;
   background-color: var(--primary-color);
   transition: 0.5s;
   z-index: -1;
